--- a/css.css
+++ b/css.css
@@ -1,4 +1,4 @@
-@import url:("");
+@import url:("https://rawgit.com/joao910/teste/master/badges.css");
 
 @keyframes fadein {
 	from {opacity: 0;}
@@ -94,7 +94,7 @@
 #room-settings .general-settings .welcome:after {
     text-align: center;
     position: absolute;
-    content: "Ragezas MLDC!";
+    content: "AQUI É O BAILÃO, COPIA NÃO COMÉDIA";
     margin-top: 150px;
     left: 40.5%
 }
@@ -748,6 +748,10 @@ div.message > div.msg > div.from > span.un {
 	border: none !important;
 }
 /*########## [chat] ##########*/
+}
+#chat-messages .cm:not(.log):hover {
+	transform: translate(5px, -5px);
+	background-color: rgba(0, 20, 61, 0.60);
 }
 #chat .message,#chat .mention,#chat .skip,#chat .moderation,#chat .emote,#chat .update,#chat .welcome {
     background-color: rgba(0, 0, 0, 0.40);
