--- a/css.css
+++ b/css.css
@@ -96,7 +96,7 @@
     position: absolute;
     content: "AQUI É O BAILÃO, COPIA NÃO COMÉDIA";
     margin-top: 150px;
-    left: 40.5%
+    left: 45.5%
 }
 
 #room-settings .general-settings .welcome .input-background {
@@ -473,7 +473,7 @@ div.message > div.msg > div.from > span.un {
 }
 
 #grab i.icon {
-    background-image: url("https://i.imgur.com/PkMKJOf.png");
+    background-image: url("https://i.imgur.com/pI5POjF.png");
 }
 
 #meh i.icon {
@@ -1184,71 +1184,6 @@ div.message > div.msg > div.from > span.un {
 
 #onesignal-bell-container{
 display: none;
-}
-
-/* Custom Badges */
-
-/* General */
-#user-rollover .info .badge-box,
-#chat-messages .badge-box {
-    background: none !important;
-    background-size: cover !important;
-    background-repeat: no-repeat !important;
-    background-position: center center !important;
-}
-
-/* Biazxx */
-#user-rollover.id-28970874 .badge-box i.bdg,
-.id-28970874 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/0GlayTf.png");
-}
-
-/* ŁƗŁ ƤΔΜƤ€Ř2 */
-#user-rollover.id-26609840 .badge-box i.bdg,
-.id-30962958 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/Fawms5B.png");
-}
-
-/* ᐛ ҜΔΜƗ¥ΔĐΔ ᐖ  */
-#user-rollover.id-28109021 .badge-box i.bdg,
-.id-28109021 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/VZU4r9F.png");
-}
-
-/* Ballack..? */
-#user-rollover.id-3526726 .badge-box i.bdg,
-.id-3526726 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/vIfxh3T.png");
-}
-
-/* Maou7 */
-#user-rollover.id-28565640 .badge-box i.bdg,
-.id-28565640 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/zA0PRZy.png");
-}
-
-/* *KUNG FU KENNi* */
-#user-rollover.id-3467818 .badge-box i.bdg,
-.id-3467818 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/upjtkLM.png");
-}
-
-/* Gwyra */
-#user-rollover.id-26613571 .badge-box i.bdg,
-.id-26717029 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/ti76K4V.png");
-}
-
-/* Mex ⓢⓐⓓⓑⓞⓨ */
-#user-rollover.id-19488358 .badge-box i.bdg,
-.id-19488358 .badge-box i.bdg {
-    background-image: url("https://nightbloo.github.io/plug/custom-badges/burgerisgooo.gif");
-}
-
-/* 𝓹𝓪𝓻 𝓲𝓼𝓼..? */
-#user-rollover.id-24860529 .badge-box i.bdg,
-.id-24860529 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/bGjXjK8.png");
 }
 
 @keyframes rainbow {
