--- a/css.css
+++ b/css.css
@@ -94,7 +94,7 @@
 #room-settings .general-settings .welcome:after {
     text-align: center;
     position: absolute;
-    content: "AQUI É O BAILÃO, COPIA NÃO COMÉDIA";
+    content: "Copyright© Bailão";
     margin-top: 150px;
     left: 45.5%
 }
