--- a/css.css
+++ b/css.css
@@ -546,29 +546,40 @@ div.message > div.msg > div.from > span.un {
 #meh i.icon {
     background-image: url("https://nightbloo.github.io/plug/icons/meh.png");
 }
-#dj-button:hover {
-	background: linear-gradient(hsla(210,10%,50%,0.5), hsla(210,10%,40%,0.5));
+#dj-button span {
+    width: 223px !important;
+    margin-left: 5px;
 }
-#dj-button .left {
-	border-radius: 50px 0 0 50px;
-	background: linear-gradient(135deg, hsl(257, 99%, 69%), hsl(266, 82%, 65%));
-	box-shadow: 0 0 10px #000;
+#dj-button .left{
+    height: 61px;
+    border-radius: 0px;
+    width: 230px;
+    transition: 0.3s;
+	background: rgba(40,44,53,1) !important;
 }
-
-#dj-button:hover .left {
-	background: linear-gradient(135deg, hsl(257, 99%, 69%), hsl(284, 58%, 47%));
+#dj-button .left .icon{
+    left: 100px;
+}
+#dj-button:not(.is-locked):hover .left {
+    top: -53px;
+}
+#dj-button.is-locked {
+    cursor: no-drop;
+}
+#dj-button.is-full .left, #dj-button.is-locked .left {
+    background:
+    linear-gradient(rgba(255,255,255,.1), rgba(0,0,0,.1)),
+   #9c5def
 }
 #dj-button.is-leave .left, #dj-button.is-quit .left {
-	background: linear-gradient(135deg, hsla(15,80%,60%,0.6), hsla(15,80%,50%,0.6));
+    background:
+    linear-gradient(rgba(255,255,255,.1), rgba(0,0,0,.1)),
+   #9c5def
 }
-#dj-button.is-leave:hover .left, #dj-button.is-quit:hover .left {
-	background: linear-gradient(135deg, hsla(15,80%,60%,0.9), hsla(15,80%,50%,0.9));
-}
-#dj-button.is-locked .left, #dj-button.is-full .left {
-	background: linear-gradient(135deg, hsla(0,0%,10%,0.6), hsla(0,0%,5%,0.6));
-}
-#dj-button.is-locked:hover .left, #dj-button.is-full:hover .left {
-	background: linear-gradient(135deg, hsla(0,0%,10%,0.9), hsla(0,0%,5%,0.9));
+#dj-button .left {
+    background:
+    linear-gradient(rgba(255,255,255,.1), rgba(0,0,0,.1)),
+   #9c5def
 }
 /*--[vote]--*/
 #vote {
