--- a/css.css
+++ b/css.css
@@ -558,6 +558,11 @@ div.message > div.msg > div.from > span.un {
 }
 #dj-button .left .icon{
     left: 100px;
+    height: 61px; 
+    border-radius: 50px;
+    width: 230px;
+    transition: 0.3s;
+    background: rgba(40,44,53,1) !important;
 }
 #dj-button:not(.is-locked):hover .left {
     top: -53px;
