--- a/css.css
+++ b/css.css
@@ -517,7 +517,7 @@ box-shadow: inset 1px 1px 0 0 rgba(0, 0, 0, 0.22);
 /*--[dj-button]--*/
 #dj-button {
 	border-radius: 50px;
-	background: linear-gradient(hsla(210,10%,50%,0.3), hsla(210,10%,40%,0.3));
+	background: linear-gradient;
 	box-shadow: 0 0 10px #000;
 }
 
