--- a/css.css
+++ b/css.css
@@ -514,14 +514,7 @@ box-shadow: inset 1px 1px 0 0 rgba(0, 0, 0, 0.22);
 	border-radius: 0 20px 20px 0;
 	background: linear-gradient(rgba(255,255,255,0.2), rgba(0,0,0,0)) !important;
 }
-/*--[dj-button]--*/
-#dj-button .left .icon{
-    left: 100px;
-    height: 61px; 
-    border-radius: 50px;
-    width: 230px;
-    transition: 0.3s;
-    background: rgba(40,44,53,1) !important;
+/*--[dj-button]--*
 }
 #dj-button:not(.is-locked):hover .left {
     top: -53px;
