--- a/css.css
+++ b/css.css
@@ -518,10 +518,14 @@ box-shadow: inset 1px 1px 0 0 rgba(0, 0, 0, 0.22);
 }
 /*--[dj-button]--*
 
+#dj-button span {		
+     width: 223px !important;		
+     margin-left: 5px;
+}
 #dj-button .left{
-border-radius: 50px;
-transition: 0.3s;
-   background: rgba(40,44,53,1) !important;
+     border-radius: 50px;
+     transition: 0.3s;
+         background: rgba(40,44,53,1) !important;
 }
 #dj-button:not(.is-locked):hover .left {
     top: -53px;
