--- a/css.css
+++ b/css.css
@@ -504,12 +504,17 @@ box-shadow: inset 1px 1px 0 0 rgba(0, 0, 0, 0.22);
 }
 
 /*        DJ BUTTON */
-
+#dj-button {
+	border-radius; 50px;
+	background: linear-gradient(hsla(210,10%,50%,0.3),
+hsla(210,10%,40%,0.3));
+	box-shadow: 0 0 10px #000;
+}
 #dj-button .left .icon{
      left: 100px;
      height: 61px;
      border-radius: 50px;
-     width: 230px;
+     width: 100px;
      transition: 0.3s;
          background: rgba(40,44,53,1) !important;
 }
