--- a/css.css
+++ b/css.css
@@ -502,16 +502,6 @@ box-shadow: inset 1px 1px 0 0 rgba(0, 0, 0, 0.22);
     color: #C9AD0B;
    text-shadow: 0 0 10px #E59900;
 }
-
-/*        DJ BUTTON */
-#dj-button {
-	border-radius; 50px;
-	background: linear-gradient(hsla(210,10%,50%,0.3),
-hsla(210,10%,40%,0.3));
-	box-shadow: 0 0 10px #000;
-}
-//*--[dj-button]--*
-
 /*--[toast-notifications]--*/
 
 .notification {
@@ -526,6 +516,14 @@ hsla(210,10%,40%,0.3));
 	border-radius: 0 20px 20px 0;
 	background: linear-gradient(rgba(255,255,255,0.2), rgba(0,0,0,0)) !important;
 }
+ /*--[dj-button]--*/
+#dj-button {
+	border-radius; 50px;
+	background: linear-gradient(hsla(210,10%,50%,0.3),
+hsla(210,10%,40%,0.3));
+	box-shadow: 0 0 10px #000;
+}
+//*--[dj-button]--*
 /* Icon fix :before */
 
 div.message > div.msg > div.from > span.un {
