--- a/css.css
+++ b/css.css
@@ -516,14 +516,40 @@ box-shadow: inset 1px 1px 0 0 rgba(0, 0, 0, 0.22);
 	border-radius: 0 20px 20px 0;
 	background: linear-gradient(rgba(255,255,255,0.2), rgba(0,0,0,0)) !important;
 }
- /*--[dj-button]--*/
-#dj-button {
-	border-radius; 50px;
-	background: linear-gradient(hsla(210,10%,50%,0.3),
-hsla(210,10%,40%,0.3));
-	box-shadow: 0 0 10px #000;
+
 }
-//*--[dj-button]--*
+/*--[dj-button]--*/
+
+#dj-button .left{
+    height: 61px;
+    border-radius: 4px;
+    width: 230px;
+    transition: 0.3s;
+}
+#dj-button .left .icon{
+    left: 100px;
+}
+#dj-button:not(.is-locked):hover .left {
+    top: -53px;
+}
+#dj-button.is-locked {
+    cursor: no-drop;
+}
+#dj-button.is-full .left, #dj-button.is-locked .left {
+    background:
+    linear-gradient(rgba(255,255,255,.1), rgba(0,0,0,.1)),
+    #383838
+}
+#dj-button.is-leave .left, #dj-button.is-quit .left {
+    background:
+    linear-gradient(rgba(255,255,255,.1), rgba(0,0,0,.1)),
+    #C4041B
+}
+#dj-button .left {
+    background:
+    linear-gradient(rgba(255,255,255,.1), rgba(0,0,0,.1)),
+    #0BFFC2
+
 /* Icon fix :before */
 
 div.message > div.msg > div.from > span.un {
