--- a/css.css
+++ b/css.css
@@ -526,27 +526,32 @@ box-shadow: inset 1px 1px 0 0 rgba(0, 0, 0, 0.22);
 #dj-button:hover .left {
 	border-radius: 50px;
 	background: linear-gradient(135deg, hsl(257, 99%, 69%), hsl(284, 58%, 47%));
+	box-shadow: 0 0 10px #000;
 }
 #dj-button.is-leave .left, #dj-button.is-quit .left {
 	border-radius: 50px;
 	background: linear-gradient(135deg, hsla(15,80%,60%,0.6),
 hsla(15,80%,50%,0.6));
+	box-shadow: 0 0 10px #000;
 }
 #dj-button.is-leave:hover .left, #dj-button.is-quit:hover .left {
 	border-radius: 50px;
 	background: linear-gradient(135deg, hsla(15,80%,60%,0.9),
 hsla(15,80%,50%,0.9));
+	box-shadow: 0 0 10px #000;
 }
 #dj-button.is-locked .left, #dj-button.is-full .left {
 	border-radius: 50px;
 	background: linear-gradient(135deg, hsla(0,0%,10%,0.6),
 hsla(0,0%,5%,0.6));
+	box-shadow: 0 0 10px #000;
 }
 #dj-button.is-locked:hover .left, #dj-button.is-full:hover .left {
 	border-radius: 50px;
 	background: linear-gradient(135deg, hsla(0,0%,10%,0.9), hsla(0,0%,5%,0.9));
-
-	/* Icon fix :before */
+	box-shadow: 0 0 10px #000;
+	
+        /* Icon fix :before */
 
 div.message > div.msg > div.from > span.un {
     vertical-align: top;
