--- a/css.css
+++ b/css.css
@@ -517,11 +517,14 @@ box-shadow: inset 1px 1px 0 0 rgba(0, 0, 0, 0.22);
 	background: linear-gradient(rgba(255,255,255,0.2), rgba(0,0,0,0)) !important;
 }
          /*--[dj-button]--*/
+ #dj-button:hover {
+	 background: linear-gradient(hsla(210,10%,50%,0.5), hsla(210,10%,40%,0.5));
 
 #dj-button .left {
 	border-radius: 50px 0 0 50px;
 	background: linear-gradient(135deg, hsl(257, 99%, 69%), hsl(266, 82%, 65%));
 	box-shadow: 0 0 10px #000;
+	
 	
 	/*--[vote]--*/
 
