--- a/css.css
+++ b/css.css
@@ -517,8 +517,11 @@ box-shadow: inset 1px 1px 0 0 rgba(0, 0, 0, 0.22);
 	background: linear-gradient(rgba(255,255,255,0.2), rgba(0,0,0,0)) !important;
 }
          /*--[dj-button]--*/
+
  #dj-button:hover {
+	 border-radius: 50px:
 	 background: linear-gradient(hsla(210,10%,50%,0.5), hsla(210,10%,40%,0.5));
+	 box-shadow: 0 0 10px #000;
 
 #dj-button .left {
 	border-radius: 50px 0 0 50px;
