--- a/css.css
+++ b/css.css
@@ -1,5 +1,4 @@
 @import url:("https://rawgit.com/joao910/bailao/master/badges.css");
-
 @keyfra	mes fadein {
 	from {opacity: 0;}
 	to {opacity: 1;}
@@ -561,10 +560,10 @@ div.message > div.msg > div.from > span.un {
  	background: linear-gradient(135deg, hsl(257, 99%, 69%), hsl(284, 58%, 47%));
  }
  #dj-button.is-leave .left, #dj-button.is-quit .left {
- 	background: linear-gradient(135deg, hsla(15,80%,60%,0.6), hsla(15,80%,50%,0.6));
+ 	background: linear-gradient(135deg, hsla(15,80%,60%,0.6), hsl(1, 80%, 40%));
  }
  #dj-button.is-leave:hover .left, #dj-button.is-quit:hover .left {
- 	background: linear-gradient(135deg, hsla(15,80%,60%,0.9), hsla(15,80%,50%,0.9));
+ 	background: linear-gradient(135deg, hsl(353, 99%, 25%), hsl(2, 80%, 37%));
  }
  #dj-button.is-locked .left, #dj-button.is-full .left {
  	background: linear-gradient(135deg, hsla(0,0%,10%,0.6), hsla(0,0%,5%,0.6));
@@ -1259,6 +1258,65 @@ div.message > div.msg > div.from > span.un {
 
 #onesignal-bell-container{
 display: none;
+} 
+
+          /* Custom Badges */
+
+/* General */
+#user-rollover .info .badge-box,
+#chat-messages .badge-box {
+    background: none !important;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    background-position: center center !important;
+}
+
+/* Biazxx */
+#user-rollover.id-28970874 .badge-box i.bdg,
+.id-28970874 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/0GlayTf.png");
+}
+
+/* ŁƗŁ ƤΔΜƤ€Ř2 */
+#user-rollover.id-26609840 .badge-box i.bdg,
+.id-30962958 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/Fawms5B.png");
+}
+
+/* ᐛ ҜΔΜƗ¥ΔĐΔ ᐖ  */
+#user-rollover.id-28109021 .badge-box i.bdg,
+.id-28109021 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/VZU4r9F.png");
+}
+
+/* Ballack..? */
+#user-rollover.id-3526726 .badge-box i.bdg,
+.id-3526726 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/vIfxh3T.png");
+}
+
+/* Maou7 */
+#user-rollover.id-28565640 .badge-box i.bdg,
+.id-28565640 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/zA0PRZy.png");
+}
+
+/* *KUNG FU KENNi* */
+#user-rollover.id-3467818 .badge-box i.bdg,
+.id-3467818 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/upjtkLM.png");
+}
+
+/* Gwyra */
+#user-rollover.id-26613571 .badge-box i.bdg,
+.id-26717029 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/ti76K4V.png");
+}
+
+/* Mex ⓢⓐⓓⓑⓞⓨ */
+#user-rollover.id-19488358 .badge-box i.bdg,
+.id-19488358 .badge-box i.bdg {
+    background-image: url("https://nightbloo.github.io/plug/custom-badges/burgerisgooo.gif");
 }
 @keyframes rainbow {
 	0% {color: #ff0000;}
