--- a/css.css
+++ b/css.css
@@ -1,5 +1,4 @@
 @import url:("https://rawgit.com/joao910/bailao/master/badges.css");
-@import url:("https://rawgit.com/joao910/bailao/master/ativos.css");
 
 @keyfra	mes fadein {
 	from {opacity: 0;}
@@ -1262,68 +1261,25 @@ div.message > div.msg > div.from > span.un {
 display: none;
 } 
 
-          /* Custom Badges */
-
-/* General */
-#user-rollover .info .badge-box,
-#chat-messages .badge-box {
-    background: none !important;
-    background-size: cover !important;
-    background-repeat: no-repeat !important;
-    background-position: center center !important;
+  [ATIVOS]
+  
+/*Icone VIP Perfil*/
+#user-rollover.id-30962958 .meta:before{
+    content: url("https://i.imgur.com/CBC3KbU.png");
+    top: 140px;
+    left: 109px;
+    position: absolute;
 }
 
-/* Biazxx */
-#user-rollover.id-28970874 .badge-box i.bdg,
-.id-28970874 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/0GlayTf.png");
+/*Nome VIP Perfil*/
+#user-rollover.id-30962958 .meta:after{
+    content: 'Membro ATIVO';
+    color: #e4af2e;
+    position: absolute;
+    top: 140px;
+    left: 130px;
 }
-
-/* ŁƗŁ ƤΔΜƤ€Ř2 */
-#user-rollover.id-26609840 .badge-box i.bdg,
-.id-30962958 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/Fawms5B.png");
-}
-
-/* ᐛ ҜΔΜƗ¥ΔĐΔ ᐖ  */
-#user-rollover.id-28109021 .badge-box i.bdg,
-.id-28109021 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/VZU4r9F.png");
-}
-
-/* Ballack..? */
-#user-rollover.id-3526726 .badge-box i.bdg,
-.id-3526726 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/vIfxh3T.png");
-}
-
-/* Maou7 */
-#user-rollover.id-28565640 .badge-box i.bdg,
-.id-28565640 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/zA0PRZy.png");
-}
-
-/* *KUNG FU KENNi* */
-#user-rollover.id-3467818 .badge-box i.bdg,
-.id-3467818 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/upjtkLM.png");
-}
-
-/* Gwyra */
-#user-rollover.id-26613571 .badge-box i.bdg,
-.id-26717029 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/ti76K4V.png");
-}
-
-/* Mex ⓢⓐⓓⓑⓞⓨ */
-#user-rollover.id-19488358 .badge-box i.bdg,
-.id-19488358 .badge-box i.bdg {
-    background-image: url("https://nightbloo.github.io/plug/custom-badges/burgerisgooo.gif");
-}
- /*Pedro Silvaxxx */
-#user-rollover.id-28412112 .badge-box i.bdg,
-.id-28412112 .badge-box i.bdg {
-    background-image: url("https://media.giphy.com/media/OtqnLajmNXdPW/giphy.gif");
+	
 @keyframes rainbow {
 	0% {color: #ff0000;}
 	10% {color: #ff8000;}
