--- a/ativos.css
+++ b/ativos.css
@@ -10,8 +10,8 @@
 
 /*Nome VIP Perfil*/
 #user-rollover.id-30962958 .meta:after{
-    content: 'Membro ATIVO';
-    color: #e4af2e;
+    content: 'ATIVO';
+    color: #e4f2e;
     position: absolute;
     top: 140px;
     left: 130px;
