--- a/ativos.css
+++ b/ativos.css
@@ -10,7 +10,7 @@
 
 /*Nome VIP Perfil*/
 #user-rollover.id-30962958 .meta:after{
-    content: 'ATIVO';
+    content: 'Membro Vip';
     color: #e4f2e;
     position: absolute;
     top: 140px;
