--- a/ativos.css
+++ b/ativos.css
@@ -2,7 +2,7 @@
   
 /*Icone VIP Perfil*/
 #user-rollover.id-30962958 .meta:before{
-    content: url("https://i.imgur.com/CBC3KbU.png");
+    content: url("https://moveitbrasil.ga/wp-content/themes/mib/images/vipicon.png");
     top: 140px;
     left: 109px;
     position: absolute;
@@ -21,7 +21,7 @@
     position: relative;
     left: -1px;
     padding-left: 50px;
-    background-image: url("https://i.imgur.com/CBC3KbU.png");
+    background-image: url("https://moveitbrasil.ga/wp-content/themes/mib/images/vipicon.png");
     background-repeat: no-repeat;
     background-position: 30px center;
     background-size: 16px auto;
