--- a/bailao.css
+++ b/bailao.css
@@ -1,5 +1,5 @@
-@import url:("");
-@import url:("");
+@import url:("https://rawgit.com/joao910/bailao/master/badges.css");
+@import url:("https://rawgit.com/joao910/bailao/master/ativos.css");
 
 @keyfra	mes fadein {
 	from {opacity: 0;}
