--- a/bailao.css
+++ b/bailao.css
@@ -1272,10 +1272,10 @@ display: none;
 }
 /*Nome VIP Perfil*/
 #user-rollover.id-30962958 .meta:after{
-    content: 'Membro Vip';
+    content: 'Membro Ativo';
     color: #e4f2e;
     position: absolute;
-    top: 140px;
+    top: 150px;
     left: 130px;
 }
 /*Icone VIP Lista*/
