--- a/bailao.css
+++ b/bailao.css
@@ -1265,7 +1265,7 @@ display: none;
   
 /*Icone VIP Perfil*/
 #user-rollover.id-30962958 .meta:before{
-    content: url("https://moveitbrasil.ga/wp-content/themes/mib/images/vipicon.png");
+    content: url("https://i.imgur.com/CBC3KbU.png");
     top: 140px;
     left: 109px;
     position: absolute;
@@ -1283,7 +1283,7 @@ display: none;
     position: relative;
     left: -1px;
     padding-left: 50px;
-    background-image: url("https://moveitbrasil.ga/wp-content/themes/mib/images/vipicon.png");
+    background-image: url("https://i.imgur.com/CBC3KbU.png");
     background-repeat: no-repeat;
     background-position: 30px center;
     background-size: 16px auto;
