--- a/bailao.css
+++ b/bailao.css
@@ -1289,6 +1289,32 @@ display: none;
     background-size: 16px auto;
     padding-top: 2px;
 }
+/*Icone VIP Perfil*/
+#user-rollover.id-29668004 .meta:before{
+    content: url("https://i.imgur.com/CBC3KbU.png");
+    top: 120px;
+    left: 90px;
+    position: absolute;
+}
+/*Nome VIP Perfil*/
+#user-rollover.id-29668004 .meta:after{
+    content: 'Membro Ativo';
+    color: #e4f2e;
+    position: absolute;
+    top: 120px;
+    left: 120px;
+}
+/*Icone VIP Lista*/
+#user-lists .list .fromID-29668004 .name, #user-lists .list .id-29668004 .name {
+    position: relative;
+    left: -1px;
+    padding-left: 50px;
+    background-image: url("https://i.imgur.com/CBC3KbU.png");
+    background-repeat: no-repeat;
+    background-position: 30px center;
+    background-size: 16px auto;
+    padding-top: 2px;
+}
                                                                                             _______________________________________
                                                                                            [Créditos Shadow Slayer "move-it brasil"]
  
