--- a/bailao.css
+++ b/bailao.css
@@ -1274,7 +1274,7 @@ display: none;
 }
 /*Nome VIP Perfil*/
 #user-rollover.id-30962958 .meta:after{
-    content:'JOÃO';
+    content:'LIDER";
     color: #660000;
     position: absolute;
     top: 120px;
