--- a/bailao.css
+++ b/bailao.css
@@ -1325,16 +1325,16 @@ display: none;
 #user-rollover.id-3526726 .meta:before{
     content: url("https://i.imgur.com/CBC3KbU.png");
     top: 120px;
-    left: 9.0px;
+    left: 80px;
     position: absolute;
 }
 /*Nome Ativo Perfil*/
 #user-rollover.id-3526726 .meta:after{
-    content: 'Membro Vip';
+    content: 'Membro Ativo';
     color: #FFD700;
     position: absolute;
     top: 120px;
-    left: 120px;
+    left: 140px;
 }
 /*Icone Ativo Lista*/
 #user-lists .list .fromID-3526726 .name, #user-lists .list .id-3526726 .name {
