--- a/bailao.css
+++ b/bailao.css
@@ -1275,7 +1275,7 @@ display: none;
 /*Nome dono Perfil*/
 #user-rollover.id-30962958 .meta:after{
     content: 'Copyright©';
-    color: #660000;
+    color: #FFD700;
     position: absolute;
     top: 120px;
     left: 110px
@@ -1285,7 +1285,7 @@ display: none;
     position: relative;
     left: -1px;
     padding-left: 50px;
-    background-image: url("https://i.imgur.com/CBC3KbU.png");
+    background-image: url("https://i.imgur.com/8fkZoeD.png");
     background-repeat: no-repeat;
     background-position: 30px center;
     background-size: 16px auto;
