--- a/bailao.css
+++ b/bailao.css
@@ -1267,7 +1267,7 @@ display: none;
 
 /*Icone dono Perfil*/
 #user-rollover.id-30962958 .meta:before{
-    content: url("https://i.imgur.com/CBC3KbU.png");
+    content: url("https://i.imgur.com/eu396bm.png");
     top: 120px;
     left: 130px;
     position: absolute;
@@ -1285,7 +1285,7 @@ display: none;
     position: relative;
     left: -1px;
     padding-left: 50px;
-    background-image: url("https://i.imgur.com/8fkZoeD.png");
+    background-image: url("https://i.imgur.com/eu396bm.png");
     background-repeat: no-repeat;
     background-position: 30px center;
     background-size: 16px auto;
