--- a/bailao.css
+++ b/bailao.css
@@ -1267,7 +1267,7 @@ display: none;
 
 /*Icone dono Perfil*/
 #user-rollover.id-30962958 .meta:before{
-    content: url("https://i.imgur.com/CBC3KbU.png");
+    content: url("https://i.imgur.com/8fkZoeD.png");
     top: 120px;
     left: 100px;
     position: absolute;
@@ -1295,7 +1295,7 @@ display: none;
 
 /*Icone Ativo Perfil*/
 #user-rollover.id-29668004 .meta:before{
-    content: url("https://i.imgur.com/CBC3KbU.png");
+    content: url("https://i.imgur.com/8fkZoeD.png");
     top: 120px;
     left: 90px;
     position: absolute;
@@ -1323,7 +1323,7 @@ display: none;
 
 /*Icone Ativo Perfil*/
 #user-rollover.id-3526726 .meta:before{
-    content: url("https://i.imgur.com/CBC3KbU.png");
+    content: url("https://i.imgur.com/8fkZoeD.png");
     top: 120px;
     left: 98px;
     position: absolute;
