--- a/bailao.css
+++ b/bailao.css
@@ -543,7 +543,7 @@ div.message > div.msg > div.from > span.un {
 }
 
 #grab i.icon {
-    background-image: url("https://i.imgur.com/pI5POjF.png");
+    background-image: url("https://i.imgur.com/1fXWaVg.png");
 }
 
 #meh i.icon {
