--- a/bailao.css
+++ b/bailao.css
@@ -1354,7 +1354,7 @@ display: none;
     position: absolute;
     top: 120px;
     left: 110px;	
- 
+}
 @keyframes rainbow {
 	0% {color: #ff0000;}
 	10% {color: #ff8000;}
